--- a/vue/package.json
+++ b/vue/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.7",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.14",
+    "v-fit-columns": "^0.2.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
   },
