--- a/vue/package.json
+++ b/vue/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.8.3",
     "element-ui": "^2.15.14",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "v-fit-columns": "^0.2.0",
     "vue": "^2.6.14",
     "vue-cookies": "^1.8.3",
